# bazeltestsuite

./: .gitignore  WORKSPACE.bazel
foo/: BUILD.bazel  Cargo.toml
foo/src/: lib.rs  main.rs
foo/tests/: foo_test.rs  other_test.rs
foo/tests/common/: mod.rs
