load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test", "rust_test_suite")

rust_binary(
    name = "foo",
    srcs = glob(include=["src/**/*.rs"]),
)

rust_library(
    name = "foo-lib",
    srcs = glob(include=["src/**/*.rs"]),
    crate_name = "foo",
)

rust_library(
    name = "foo-test-common",
    srcs = ["tests/common/mod.rs"],
    crate_name = "common",
)

rust_test_suite(
    name = "foo-test-suite",
    srcs = glob(include=["tests/foo_test.rs"]),
    deps = [":foo-lib", ":foo-test-common"]
)
