load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test", "rust_test_suite")

rust_binary(
    name = "foo",
    srcs = glob(include=["src/**/*.rs"]),
)

rust_library(
    name = "foo-lib",
    srcs = glob(include=["src/**/*.rs"]),
    crate_name = "foo",
)

rust_test_suite(
    name = "foo-test-suite",
    srcs = glob(include=["tests/*.rs"]),
    compile_data = ["tests/common/mod.rs"],
    deps = [":foo-lib"]
)
